--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-bin
-gen
-obj
-.cproject
-.project
+# generated files
+bin/
+gen/
+obj/
 *.[oa]
 
+# Eclipse project files
+.classpath
+.project
+.cproject
